WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299864
[OpenXR] Unsupported path errors trying to bind hand interaction profile in desktop
https://bugs.webkit.org/show_bug.cgi?id=299864
Summary
[OpenXR] Unsupported path errors trying to bind hand interaction profile in d...
Sergio Villar Senin
Reported
2025-09-30 00:36:44 PDT
Hand interaction profile is normally not supported by desktop runtimes. That's why the runtime issues an unsupported path error while trying to bind it. XR_ERROR_PATH_UNSUPPORTED: xrSuggestInteractionProfileBindings(suggestedBindings->interactionProfile == "/interaction_profiles/ext/hand_interaction_ext") used but XR_EXT_hand_interaction not enabled The error is harmless but we can get rid of it by not binding unsupported interaction profiles.
Attachments
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2025-09-30 00:40:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51556
Radar WebKit Bug Importer
Comment 2
2025-10-07 00:38:08 PDT
<
rdar://problem/162098359
>
chirstian7628
Comment 3
2025-10-07 03:02:38 PDT
(In reply to Radar WebKit Bug Importer from
comment #2
)
> <
rdar://problem/162098359
>
chirstian7628
Comment 4
2025-10-07 03:03:47 PDT
(In reply to chirstian7628 from
comment #3
)
> (In reply to Radar WebKit Bug Importer from
comment #2
) > > <
rdar://problem/162098359
>
EWS
Comment 5
2025-10-07 06:15:31 PDT
Committed
301129@main
(3c67bdc9b9be): <
https://commits.webkit.org/301129@main
> Reviewed commits have been landed. Closing PR #51556 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug