[OpenXR] Unsupported path errors trying to bind hand interaction profile in desktop https://bugs.webkit.org/show_bug.cgi?id=299864

Reviewed by Carlos Garcia Campos.

Hand interaction profile is normally not supported by desktop runtimes.
That's why the runtime issues an unsupported path error while trying to bind it.

XR_ERROR_PATH_UNSUPPORTED: xrSuggestInteractionProfileBindings(suggestedBindings->interactionProfile
== "/interaction_profiles/ext/hand_interaction_ext") used but XR_EXT_hand_interaction not enabled

The error is harmless but we can get rid of it by not binding unsupported
interaction profiles.

No new tests required as this just prevents an error from the
runtime from being shown. It does not affect functionality
because the unsupported interaction profile was ignored anyway.

* Source/WebKit/UIProcess/XR/openxr/OpenXRInputSource.cpp:
(WebKit::OpenXRInputSource::suggestBindings const):

Canonical link: https://commits.webkit.org/301129@main